WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262981
Regression(
267014@main
) Flaky crash under WebKit::GPUConnectionToWebProcess::didReceiveMessage()
https://bugs.webkit.org/show_bug.cgi?id=262981
Summary
Regression(267014@main) Flaky crash under WebKit::GPUConnectionToWebProcess::...
Chris Dumez
Reported
2023-10-10 14:52:39 PDT
Flaky crash under WebKit::GPUConnectionToWebProcess::didReceiveMessage(): ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x107329e3e WTFCrash 1 com.apple.WebKit 0x130280a0e WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 2 com.apple.WebKit 0x1323070b8 IPC::Connection::dispatchMessage(IPC::Decoder&) 3 com.apple.WebKit 0x132307484 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>) 4 com.apple.WebKit 0x132307764 IPC::Connection::dispatchOneIncomingMessage() 5 com.apple.WebKit 0x132321edc IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17::operator()() const 6 com.apple.WebKit 0x132321e48 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17, void>::call() 7 com.apple.JavaScriptCore 0x10913e362 WTF::Function<void ()>::operator()() const ``` Example of message that frequently fails: GPUConnectionToWebProcess_CreateRemoteGPU.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-10-10 14:52:50 PDT
<
rdar://114245301
>
Chris Dumez
Comment 2
2023-10-10 16:39:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18918
EWS
Comment 3
2023-10-11 11:13:57 PDT
Committed
269209@main
(e4fcb9c6b04b): <
https://commits.webkit.org/269209@main
> Reviewed commits have been landed. Closing PR #18918 and removing active labels.
Kimmo Kinnunen
Comment 4
2023-10-11 23:36:57 PDT
***
Bug 262401
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug