Source/WebKit/UIProcess/API/APIPageConfiguration.h
@@ -50,6 +50,8 @@ class WebProcessPool;
 class WebUserContentControllerProxy;
 class WebsiteDataStore;
 
+struct GPUProcessPreferencesForWebProcess;
+
 #if ENABLE(WK_WEB_EXTENSIONS)
 class WebExtensionController;
 #endif
@@ -222,6 +224,10 @@ public:
 
     void setContentSecurityPolicyModeForExtension(WebCore::ContentSecurityPolicyModeForExtension mode) { m_data.contentSecurityPolicyModeForExtension = mode; }
     WebCore::ContentSecurityPolicyModeForExtension contentSecurityPolicyModeForExtension() const { return m_data.contentSecurityPolicyModeForExtension; }
+
+#if ENABLE(GPU_PROCESS)
+    WebKit::GPUProcessPreferencesForWebProcess preferencesForGPUProcess() const;
+#endif
 
 private:
     struct Data {
